# spl-math

./: Cargo.toml  README.md  cargofixall  rust-toolchain.toml
.github/workflows/: ci-rust.yml
benches/: bench_lt_hash.rs  bench_sqrt.rs  benches_precision_number.rs
benches/muldiv/: basic.rs
benches/pn/: basic_math.rs  log10.rs  mod.rs  pow.rs  sqrt.rs
ci/: cargo-build-test.sh  rust-version.sh
proptest-regressions/precise_number/: pn_tests.txt
results/cu_benches/: compute_units.md
src/: approximations.rs  bench_cu.rs  distribution_math.rs  lib.rs  muldiv.rs  precise_number.rs  sqrt_math.rs  uint.rs
src/precise_number/: convert_from_f64.rs  mod.rs  pn_128_64.rs  pn_128_64_d12.rs  pn_128_64_d9.rs  pn_256_128.rs  pn_256_128_d12.rs  pn_256_128_d18.rs  pn_64_32.rs  pn_64_32_d12.rs  pn_64_32_d4.rs  pn_impl.rs  pn_log10_tests.rs  pn_muldiv_tests.rs  pn_sqrt_tests.rs  pn_tests.rs  pn_tests_pn_256_128_d12.rs  pn_tests_pn_8_8_d1.rs
test_programs/counter/: Cargo.toml
tests/: bench_cu.rs
