[package]
name = "spl-math-evolved"
version = "0.3.0"
description = "Solana Program Library Math evolved from spl-math"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[[bench]]
name = "benches_precision_number"
harness = false

[dependencies]
num-traits = "0.2"
uint = "0.10"

[dev-dependencies]
proptest = { version = "1.6.0", features = ["timeout"] }
quickcheck = "1"
quickcheck_macros = "1"
libm = "0.2.11"
criterion = "0.6.0"
itertools = "0.14.0"
bigdecimal-rs = "0.2.1"
fixed = "1.29"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
